@@ -160,7 +160,7 @@ class BaseIP(object):
             3330, 4193, 3879 and 2365.
         """
         if self._module.version == 4:
-            for cidr in IPV4_PRIVATE:
+            for cidr in IPV4_PRIVATEISH:
                 if self in cidr:
                     return True
         elif self._module.version == 6:
@@ -729,6 +729,22 @@ class IPAddress(BaseIP):
         if not self.is_ipv4_mapped():
             return self
         return self.ipv4()
+
+    def is_ipv4_private_use(self):
+        """
+        Returns ``True`` if this address is an IPv4 private-use address as defined in
+        :rfc:`1918`.
+
+        The private-use address blocks:
+
+        * ``10.0.0.0/8``
+        * ``172.16.0.0/12``
+        * ``192.168.0.0/16``
+
+        .. versionadded:: NEXT_NETADDR_VERSION
+        """
+        return self._module.version == 4 and any(self in cidr for cidr in IPV4_PRIVATE_USE)
+
 
 class IPListMixin(object):
     """
@@ -1990,13 +2006,17 @@ def all_matching_cidrs(ip, cidrs):
 #-----------------------------------------------------------------------------
 IPV4_LOOPBACK  = IPNetwork('127.0.0.0/8')    #   Loopback addresses (RFC 990)
 
-IPV4_PRIVATE = (
+IPV4_PRIVATE_USE = [
     IPNetwork('10.0.0.0/8'),        #   Class A private network local communication (RFC 1918)
-    IPNetwork('100.64.0.0/10'),     #   Carrier grade NAT (RFC 6598)
     IPNetwork('172.16.0.0/12'),     #   Private network - local communication (RFC 1918)
+    IPNetwork('192.168.0.0/16'),    #  Class B private network local communication (RFC 1918)
+]
+
+IPV4_PRIVATEISH = (
+    *IPV4_PRIVATE_USE,
+    IPNetwork('100.64.0.0/10'),     #   Carrier grade NAT (RFC 6598)
     IPNetwork('192.0.0.0/24'),      #   IANA IPv4 Special Purpose Address Registry (RFC 5736)
     # protocol assignments
-    IPNetwork('192.168.0.0/16'),    #  Class B private network local communication (RFC 1918)
     
     # benchmarking
     IPNetwork('198.18.0.0/15'),     #  Testing of inter-network communications between subnets (RFC 2544)
